--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -24,7 +24,7 @@ $inArticleInlineImgWidth: 114px;
 $trailblockImgWidth: 100%;
 $trailblockImgWidthLarge: 140px;
 $mobilePopupOffset: 43px;
-$headerMargin: 36px;
+$pageOffset: 36px;
 
 // Guss defaults overrides
 // =============================================================================
