--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -94,11 +94,22 @@ blockquote {
     margin: rem($gs-baseline * 2) 0 rem($gs-baseline * 3);
 }
 
+.text-feature {
+    @include fs-headline(3);
+    @include mq(tablet) {
+        @include fs-headline(5);
+    }
+}
+
 .text-info {
     @include fs-data(2);
     color: $c-neutral3;
     margin: rem($gs-baseline) 0;
     display: block;
+}
+
+.text-highlight {
+    color: $mem-buttonBlue;
 }
 
 .case--lower {
