--- a/frontend/assets/stylesheets/components/_grid.scss
+++ b/frontend/assets/stylesheets/components/_grid.scss
@@ -4,6 +4,8 @@
 
 .grid {
     @include clearfix;
+    list-style: none;
+    margin: 0;
 }
 .grid__item {
     margin-bottom: rem($gs-gutter);
@@ -54,6 +56,10 @@
 }
 
 .grid--4up {
+    @include mq(mobileLandscape) {
+        width: 100% + $gutter-width-fluid; // 100% + gutter width from .benefit
+        margin-left: -$gutter-width-fluid; // - gutter width from .benefit
+    }
     .grid__item {
         @include mq(tablet) {
             width: 25% - $gutter-width-fluid;
