--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -65,18 +65,21 @@
 @import 'components/content';
 @import 'components/action';
 @import 'components/page';
+@import 'components/blocks';
 @import 'components/asides';
 @import 'components/benefits';
 @import 'components/user';
-@import 'components/social';
-@import 'components/pricing';
-@import 'components/patterns';
-@import 'components/signpost';
 @import 'components/help';
 @import 'components/modal';
 @import 'components/loader';
+@import 'components/social';
+@import 'components/pricing';
+@import 'components/signpost';
+@import 'components/slideshow';
+@import 'components/features';
 @import 'components/messages';
 @import 'components/warnings';
+@import 'components/patterns';
 
 /* Membership Pages
    ========================================================================== */
@@ -91,7 +94,6 @@
 @import 'pages/login';
 @import 'pages/about';
 @import 'pages/feedback';
-@import 'pages/home'; // Home A-B test styles
 
 /* Overrides / Trumps
    ========================================================================== */
