--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -7,7 +7,7 @@
 
 @import model.Eventbrite.MasterclassEvent
 
-@main("Masterclasses", containerPadding=false, htmlClass="events-bg theme--masterclasses", pageInfo=pageInfo) {
+@main("Masterclasses", htmlClass="events-bg theme--masterclasses", pageInfo=pageInfo) {
 
     @fragments.event.headerBar(
         "Courses and workshops taught by award-winning professionals, with discounts for Partners and Patrons",
