--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -26,7 +26,7 @@
     </li>
 }
 
-@main("Home Page a-b", containerPadding=false, noIndex=true) {
+@main("Home Page a-b", noIndex=true) {
     <section class="u-cf">
         <div class="slide-show">
             @slideShowElement(6, "viv_west_", "Guardian Live event: Vivienne Westwood", "six")
