--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -3,7 +3,7 @@
 @import model.Benefits
 @import com.gu.membership.salesforce.Tier
 
-@main("About", isBrochure = true, containerPadding = false, htmlClass = "about-membership", pageInfo=pageInfo) {
+@main("About", isBrochure = true, htmlClass = "about-membership", pageInfo=pageInfo) {
 
     <div class="home-slice home-slice--epic u-cf">
         <div class="home-slice__inner u-cf">
