--- a/frontend/app/views/info/feedback.scala.html
+++ b/frontend/app/views/info/feedback.scala.html
@@ -2,9 +2,9 @@
 
 @import helper.CSRF
 
-@main("Feedback", containerPadding=false, htmlClass = "feedback") {
+@main("Feedback", htmlClass = "feedback") {
 
-    <main class="page-container__inner">
+    <main role="main" class="page-content page-container__inner">
         <section class="page-header">
             <h1 class="page-headline">Feedback</h1>
             <p class="page-intro">Help us improve your membership experience</p>
