--- a/frontend/app/views/joiner/form/addressWithWelcomePack.scala.html
+++ b/frontend/app/views/joiner/form/addressWithWelcomePack.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 
-@main("Enter Details | Staff", containerPadding = false, isBrochure = true) {
+@main("Enter Details | Staff", isBrochure = true) {
     <section class="section-payment u-cf">
 
         <form action="" method="POST" id="payment-form" class="form form-primary-container js-staff-form">
