--- a/frontend/app/views/joiner/form/payment.scala.html
+++ b/frontend/app/views/joiner/form/payment.scala.html
@@ -3,7 +3,7 @@ marketingChoices: model.StatusFields, passwordExists: Boolean, pageInfo: model.P
 
 @import helper._
 
-    @main("Payment | " + tier, containerPadding = false, isBrochure = true, pageInfo = pageInfo) {
+    @main("Payment | " + tier, isBrochure = true, pageInfo = pageInfo) {
         <section class="section-payment u-cf">
 
 
