--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -18,9 +18,9 @@
     </li>
 }
 
-@main("Staff Membership", containerPadding=false) {
+@main("Staff Membership") {
 
-    <main class="page-container__inner" role="main">
+    <main class="page-content page-container__inner" role="main">
 
         @fragments.notifications.flashMessage(error)
 
