--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -4,7 +4,7 @@
 @import views.support.Dates._
 @import configuration.Config
 
-@main("Join Choose Tier", pageInfo=pageInfo, containerPadding = false, isBrochure = true, htmlClass = "join-choose-tier") {
+@main("Join Choose Tier", pageInfo=pageInfo, isBrochure = true, htmlClass = "join-choose-tier") {
 
     <section class="section-two-thirds u-cf">
 
