--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -4,7 +4,7 @@
 @import configuration.Config
 @import model.Benefits
 
-@main("Sign in/Register", containerPadding = false, isBrochure = true) {
+@main("Sign in/Register", isBrochure = true) {
 
     <section class="section-signin">
 
