--- a/frontend/app/views/testing/testUsers.scala.html
+++ b/frontend/app/views/testing/testUsers.scala.html
@@ -2,7 +2,7 @@
 
 @import configuration.Config
 
-@main("Test Users", containerPadding=false) {
+@main("Test Users") {
 
     <main role="main" class="page-content page-container__inner">
 
