--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -6,7 +6,7 @@
 
 @main("Cancel Tier") {
 
-    <section>
+    <main role="main" class="page-content page-content--padded">
 
         @fragments.layout.sectionHeader("We don't like goodbyes&hellip;")
 
@@ -27,5 +27,5 @@
             <button id="qa-confirm-cancel" class="action action-cta action-cta--confirm action-cta--full-width-mobile">Cancel membership</button>
         </form>
 
-    </section>
+    </main>
 }
