--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -6,7 +6,7 @@
 
 @main("Change Tier", htmlClass = "change-tier") {
 
-    <main role="main">
+    <main role="main" class="page-content page-content--padded">
         <div class="content__container">
             <section class="content__section">
                 <a href="@Config.idWebAppUrl/membership/edit" class="action action--arrow-left action-cta--confirm">Edit profile</a>
