--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -6,7 +6,7 @@
 
 @main("Change Tier | Friend from " + currentTier) {
 
-    <section>
+    <main role="main" class="page-content">
 
         @fragments.layout.sectionHeader("Are you sure?")
         <p>You will no longer receive all the great benefits</p>
@@ -21,6 +21,6 @@
             </div>
         </div>
 
-    </section>
+    </main>
 
 }
