--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -125,7 +125,8 @@ $c-brandLightBlue: #94b1ca;
 $c-error: #d61d00;
 
 $c-body: #333333; // Changed from #545454
-$c-background-transparent: rgba(51, 51, 51, .05);
+$c-body-transparent: rgba(51, 51, 51, .05);
+$c-background: #ffffff;
 
 $c-neutral1: #333333;
 $c-neutral2: #767676;
