--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -1,13 +1,14 @@
+/* ==========================================================================
+   Layout
+   ========================================================================== */
+
 html {
     position: relative;
     min-height: 100%;
-    background-color: #ffffff;
+    background-color: $c-background;
 
     @include mq(tablet) {
         background: url(/assets/images/mem-bg-events.jpg) repeat-y center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
         background-size: cover;
     }
 
@@ -15,22 +16,19 @@ html {
     &.about-membership {
         background-attachment: fixed;
         background-repeat: repeat-y;
-        background-position-x: left;
-        background-position-y: center;
+        background-position: center;
 
         @include mq(tablet) {
             background-image: url(/assets/images/mem-bg-events.jpg);
-            background-position-x: center; // this image has white at the top center so on mobile it looks as though no image has loaded - left aligning on mobile as a temp fix.
         }
     }
 
+    //TODO: Remove when short homepage goes live.
     &.home-page {
 
         background: url(/assets/images/backgrounds/400-Home-hero.jpg) no-repeat top center fixed;
 
-        @media
-        (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi) {
+        @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
             background: url(/assets/images/backgrounds/400-Home-hero-2x.jpg) no-repeat top center fixed;
             background-size: rem(400px) rem(444px);
         }
@@ -62,64 +60,57 @@ html {
 
 }
 
+// TODO: Can magic numbers be removed?
+// Magic numbers refer to footer height
 body {
     min-height: 100%;
-    margin-bottom: rem(252px); // Magic numbers refer to footer height
+    margin-bottom: rem(252px);
 
     @include mq(tablet) {
         margin-bottom: rem(218px);
     }
-
     @include mq(wide) {
         margin-bottom: rem(220px);
     }
 }
 
-.header {
-    position: relative;
-}
-
+// TODO: Extract max-widths out into variables
+//       Extract constraining layout styles into l-constrained helper
+//
 // note: the max-widths set here
 // are duplicated in mixins.scss
 // for the side-margins function
 // please duplicate your changes
 // this alignment is too perfect
 .page-container {
-    background-color: $white;
-    padding: 0 rem($gs-gutter / 2);
-
-    @include mq(tablet) {
-        padding: 0 $gs-gutter;
-        max-width: gs-span(12)+($gs-gutter*2);
-    }
 
     @include clearfix;
     position: relative;
+
     margin: 0 auto;
 
-    @include mq(desktop) {
-        padding: 0;
+    @include mq(tablet) {
+        max-width: gs-span(12)+($gs-gutter*2);
     }
 
     @include mq(mem-full) {
         max-width: gs-span(14)+($gs-gutter*2);
     }
+}
 
-    //TODO: Remove. This is almost always false.
-    &.page-container--with-padding {
-        background-color: $white;
-        @include mq(tablet) {
-            padding: 0 rem($gs-gutter * 4) rem($gs-gutter * 8);
-        }
+.page-content {
+    @include clearfix;
+    background-color: $c-background;
+    padding: 0 $gs-gutter;
+}
+.page-content--padded {
+    @include mq(tablet) {
+        padding: 0 rem($gs-gutter * 4) rem($gs-gutter * 8);
     }
 }
 
-.page-container__inner {
-    @include mq(desktop) {
-        margin: 0 rem($gs-gutter);
-    }
-}
-
+// TODO: Refactor to remove code below here
+// ========================================
 .l-row__item {
     padding-bottom: rem($gs-gutter * 2);
 }
@@ -137,12 +128,10 @@ body {
     }
 
     .two-thirds {
-
         @include mq(tablet) {
             padding-left: $gs-gutter;
             width: rem(gs-span(8));
         }
-
         @include mq(mem-full) {
             width: rem(gs-span(8) + $gs-gutter);
         }
@@ -155,10 +144,8 @@ body {
             width: rem(gs-span(3));
             padding-left: rem($gs-gutter);
         }
-
         @include mq(mem-full) {
             width: rem(gs-span(4) + $gs-gutter);
         }
     }
-
 }
