--- a/frontend/app/views/error404.scala.html
+++ b/frontend/app/views/error404.scala.html
@@ -1,4 +1,6 @@
 @main("Page not found") {
-    <h1>Error 404 - Page not found</h1>
-    <p>Sorry, this page does not exist.</p>
+    <main role="main" class="page-content">
+        <h1>Error 404 - Page not found</h1>
+        <p>Sorry, this page does not exist.</p>
+    </main>
 }
