--- a/frontend/app/views/info/giftingPlaceholder.scala.html
+++ b/frontend/app/views/info/giftingPlaceholder.scala.html
@@ -1,12 +1,8 @@
 @import configuration.Config
 
-@main("Gifting", htmlClass="help", containerPadding=false) {
-
+@main("Gifting", htmlClass="help") {
     <main role="main" class="page-content page-container__inner">
-
         @fragments.page.pageHeader("Gifting")
-
-
         <section class="page-section page-section--bordered">
             <div class="page-section__lead-in">
                 <h2 class="page-section__headline">Gifting is coming soon</h2>
