--- a/frontend/app/views/joiner/form/address.scala.html
+++ b/frontend/app/views/joiner/form/address.scala.html
@@ -4,7 +4,7 @@ passwordExists: Boolean)(implicit token: play.filters.csrf.CSRF.Token)
 @import com.gu.membership.salesforce.Tier.Friend
 @import helper._
 
-@main("Address details | Friend", containerPadding = false, isBrochure = true) {
+@main("Address details | Friend", isBrochure = true) {
 
     <section class="section-payment u-cf">
 
