Remove need for page-container__inner

--- a/frontend/app/views/info/feedback.scala.html
+++ b/frontend/app/views/info/feedback.scala.html
@@ -4,7 +4,7 @@
 
 @main("Feedback", htmlClass = "feedback") {
 
-    <main role="main" class="page-content page-container__inner">
+    <main role="main" class="page-content">
         <section class="page-header">
             <h1 class="page-headline">Feedback</h1>
             <p class="page-intro">Help us improve your membership experience</p>
