--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -20,7 +20,7 @@
 
 @main("Staff Membership") {
 
-    <main class="page-content page-container__inner" role="main">
+    <main class="page-content" role="main">
 
         @fragments.notifications.flashMessage(error)
 
