--- a/frontend/app/views/patterns/patterns.scala.html
+++ b/frontend/app/views/patterns/patterns.scala.html
@@ -19,7 +19,7 @@
 
 @main("Pattern Library") {
 
-    <main class="page-content page-container__inner">
+    <main class="page-content">
 
     <div class="pattern-nav js-pattern-nav"></div>
 
