--- a/frontend/app/views/testing/testUsers.scala.html
+++ b/frontend/app/views/testing/testUsers.scala.html
@@ -4,7 +4,7 @@
 
 @main("Test Users") {
 
-    <main role="main" class="page-content page-container__inner">
+    <main role="main" class="page-content">
 
         @fragments.page.pageHeader("Test Users")
 
