--- a/frontend/app/views/info/giftingPlaceholder.scala.html
+++ b/frontend/app/views/info/giftingPlaceholder.scala.html
@@ -1,7 +1,7 @@
 @import configuration.Config
 
 @main("Gifting", htmlClass="help") {
-    <main role="main" class="page-content page-container__inner">
+    <main role="main" class="page-content">
         @fragments.page.pageHeader("Gifting")
         <section class="page-section page-section--bordered">
             <div class="page-section__lead-in">
