--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -2,7 +2,7 @@
 @import model.Faq
 
 @main("Help") {
-    <main role="main" class="page-content page-container__inner">
+    <main role="main" class="page-content">
         @fragments.page.pageHeader("FAQ", Some("Common questions about Guardian Membership"))
         <section class="page-section">
             <div class="page-section__content">
