--- a/frontend/app/views/staff/unauthorised.scala.html
+++ b/frontend/app/views/staff/unauthorised.scala.html
@@ -4,7 +4,7 @@
 
 @main("Unauthorised Staff") {
 
-    <main class="page-content page-container__inner">
+    <main class="page-content">
         <section class="page-header">
             <h1 class="page-headline">No Access</h1>
         </section>
