Add new images for short homepage

--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -12,7 +12,7 @@
             </div>
             <h2 class="slideshow__description">@description</h2>
         </figcaption>
-        <div class="delayed-home-image-load" data-src="@Asset.at("images/noAssetHash/home/hero/" + imgSrcPrefix + "{width}{pixel_ratio}.jpg")" data-alt="@description" data-class="responsive-img"></div>
+        <div class="delayed-home-image-load" data-src="@Asset.at("images/noAssetHash/home/hero/" + imgSrcPrefix + "{width}{pixel_ratio}.jpg")" data-alt="@description" data-class="responsive-img slideshow__image"></div>
     </figure>
 }
 
