Design refinement of short homepage

--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -97,6 +97,9 @@ blockquote {
 .text-feature {
     @include fs-headline(3);
     @include mq(tablet) {
+        @include fs-headline(4);
+    }
+    @include mq(desktop) {
         @include fs-headline(5);
     }
 }
