--- a/frontend/assets/stylesheets/components/_slideshow.scss
+++ b/frontend/assets/stylesheets/components/_slideshow.scss
@@ -32,13 +32,19 @@
     }
 }
 .slideshow__detail {
+    width: 100%;
     position: absolute;
     bottom: 0;
-    padding: rem($gs-gutter) 0 rem($gs-gutter) rem($gs-gutter);
-    width: 100%;
-    @include simple-gradient(transparent, rgba(0, 0, 0, .8));
-    color: $white;
     z-index: 2;
+    color: $white;
+    padding: rem($gs-gutter / 2);
+    padding-top: rem($gs-gutter * 2);
+    @include simple-gradient(transparent, rgba(0, 0, 0, .8));
+
+    @include mq(mobileLandscape) {
+        padding: rem($gs-gutter);
+        padding-top: rem($gs-gutter * 2);
+    }
 }
 .slideshow__description {
     @include fs-textSans(1);
