Add hairline border variant to grid component

--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -34,7 +34,7 @@
 
     <section class="page-content">
         <div class="section-features">
-            <ul class="grid grid--4up">
+            <ul class="grid grid--4up grid--4up-bordered">
                 <li class="grid__item">
                     @fragments.page.featurePanel("whats-included-", "Discover what's included with Guardian Membership", "/about", "png")
                 </li>
