--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -302,6 +302,7 @@
 
 .action-secondary-small--no-margin,
 .action--no-margin {
+    margin-top: 0;
     margin-bottom: 0;
 }
 .action--no-top-margin {
