Extract Imager config out into module, not in main.js

--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -32,8 +32,11 @@
             },
             homeImages: {
                 widths: [@Config.homeImageWidths.mkString(",")],
-                promoWidths: [@Config.homeImagePromoWidths.mkString(",")],
                 ratios: [@Config.homeImageRatios.mkString(",")]
+            },
+            featureImages: {
+                widths: [@Config.featureImageWidths.mkString(",")],
+                ratios: [@Config.featureImageRatios.mkString(",")],
             }
         },
         googleAnalytics: {
