--- a/frontend/app/views/fragments/page/featurePanel.scala.html
+++ b/frontend/app/views/fragments/page/featurePanel.scala.html
@@ -1,11 +1,11 @@
-@(imgSrc: String, description: String, anchorHref: String, fileType: String = "jpg")
+@(imgSrc: String, description: String, anchorHref: String)
 
 @import views.support.Asset
 
 <div class="feature-panel">
     <a class="feature-panel__cta" href="@anchorHref">
         <div class="feature-panel__media">
-            <div class="delayed-home-promo-image-load" data-src="@Asset.at("images/noAssetHash/home/promo/" + imgSrc + "{width}{pixel_ratio}." + fileType)" data-alt="@description" data-class="responsive-img"></div>
+            <div class="js-image-feature" data-src="@Asset.at(imgSrc)" data-alt="@description" data-class="responsive-img"></div>
         </div>
         <h3 class="feature-panel__description">@description</h3>
     </a>
